Fix docs layout on mobile

--- a/django_project/frontend/src/app/app-mobile.scss
+++ b/django_project/frontend/src/app/app-mobile.scss
@@ -392,6 +392,16 @@
       padding-left: 9px !important;
     }
   }
+
+  .DocsCrawler {
+    height: 100vh;
+    width: 100vw;
+
+    .DocsCrawler-Content {
+      width: 100%;
+      margin-right: -100%;
+    }
+  }
 }
 
 .maplibregl-popup {
